# NuclearBriefcase

./: .gitmodules  LICENSE  README.md  serial_monitor.sh
docs/faceplate/: faceplate.dxf  faceplate.lbrn2
src/: .clang-format  CMakeLists.txt  anim.c  anim.h  main.c  renderer.c  renderer.h  shared_config.h  state.c  state.h  utils.c  utils.h
src/Tests/: CMakeLists.txt  main.c  tests_utils.c  tests_utils.h
src/defines/: config.h  gp_masks.h
src/modules/launch/: launch.c  launch.h
src/modules/mcp/: mcp.c  mcp.h
src/modules/numbers/: numbers.c  numbers.h  pio_numbers.pio
src/modules/piezo/: piezo.c  piezo.h  piezo_data.c  piezo_data.h
src/modules/status/: status.c  status.h
src/modules/switches/: switches.c  switches.h
src/modules/wsleds/: pio_wsleds.pio  wsleds.c  wsleds.h  wsleds_data.h
src/pio/: numbers.pio
